<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather_app_greetings">Select city:</string>
    <string name="show_temp">Temperature</string>
    <string name="show_temp_template">Temp %1$d C</string>
    <string name="show_temp_template_short">%1$s C</string>
    <string name="show_temp_template_short2">%1$s C, %2$s</string>
    <string name="show_pressure_template">Pressure %1$d</string>
    <string name="show_pressure_template_short">%1$d hPa</string>
    <string name="show_pressure_template_short2">%1$s hPa</string>
    <string name="share_temp_template">Today is a nice day! Weather in %1$s: %2$d C</string>
    <string name="share_popup_temp_template">Weather forecast at %1$s in the %2$s: %3$s C</string>
    <string name="city_weather_label">Current weather:</string>
    <string name="shareWith">Share</string>
    <string name="show_city_info">Show City information</string>
    <string name="call_wrong_intent">Call wrong intent</string>
    <string name="temp_sign">Temperature: </string>
    <string name="one_day_weather_forecast">One day forecast</string>
    <string name="week_weather_forecast">Week forecast</string>
    <string name="show_pressure">Show pressure</string>
    <string name="menu_item_1">item1</string>
    <string name="menu_item_2">item2</string>
    <string name="menu_item_exit">Close app</string>
    <string name="menu_context_delete_item">Delete item</string>
    <string name="menu_context_show_toast">Show Toast</string>
    <string name="menu_context_add_item">Add item</string>
    <string name="json_not_found">JSON not found</string>
    <string name="weather_api_key">2bcc2b628b3d3a3ae459b1f80f45b63e</string>
    <string-array name="cities_list">
        <item>Berlin</item>
        <item>Moscow</item>
        <item>New-York</item>
        <item>Tokyo</item>
    </string-array>
</resources>
